--- a/src/_pages/index.html
+++ b/src/_pages/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Urca Lab
+title: Urca Lab - Infraestructura para tu empresa
 ---
 
 <div class="flex flex-col h-full items-center justify-center">
-  <h1 class="text-4xl italic text-primary mb-4">Proximamente ...</h1>
+  <h1 class="text-4xl italic text-primary mb-4">Infraestructura para tu empresa</h1>
 </div>
 
 
