update home page

--- a/src/_pages/index.html
+++ b/src/_pages/index.html
@@ -2,8 +2,18 @@
 layout: default
 ---
 
-<div class="flex flex-col h-full items-center justify-center">
-  <h1 class="text-4xl italic text-primary mb-4">Infraestructura para tu empresa</h1>
+<div class="grid grid-cols-2 gap-8 my-20">
+  <div class="flex flex-col justify-center">
+    <h1 class="text-5xl text-white mb-2">El software que tu negocio necesita, en menos de 30 días</h1>
+    <h2 class="text-xl text-slate-400 mb-8">Construye tu propia plataforma web y app iOS, sin saber programar.
+    </h2>
+    <div class="flex space-x-4">
+      <a href="#contact" class="text-lg bg-slate-100 text-slate-900 px-4 py-3 rounded-full">Agenda una asesoría
+        gratuita</a>
+      <a href="#contact" class="text-lg text-white px-4 py-3 hover:underline">Ir a la demo &rarr;</a>
+    </div>
+  </div>
+  <div class="flex items-center justify-end">
+    <img src="/images/logo.png" alt="Wolf Technology Logo" class="h-60 rounded-[2rem]">
+  </div>
 </div>
-
-
