--- a/src/_pages/index.html
+++ b/src/_pages/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="grid grid-cols-2 gap-8 my-20">
   <div class="flex flex-col justify-center">
-    <h1 class="text-5xl text-white mb-2">El software que tu negocio necesita, en menos de 30 días</h1>
+    <h1 class="text-5xl text-white mb-2">El software que tu negocio necesita para ser diferente</h1>
     <h2 class="text-xl text-slate-400 mb-8">Construye tu propia plataforma web y app iOS, sin saber programar.
     </h2>
     <div class="flex space-x-4">
