make it mobile friendle

--- a/src/_pages/index.html
+++ b/src/_pages/index.html
@@ -2,18 +2,19 @@
 layout: default
 ---
 
-<div class="grid grid-cols-2 gap-8 my-20">
-  <div class="flex flex-col justify-center">
-    <h1 class="text-5xl text-white mb-2">El software que tu negocio necesita para ser diferente</h1>
-    <h2 class="text-xl text-slate-400 mb-8">Construye tu propia plataforma web y app iOS, sin saber programar.
+<div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-8 my-10 md:my-20 px-4 md:px-0">
+  <div class="flex flex-col justify-center text-center md:text-left">
+    <h1 class="text-3xl md:text-5xl text-white mb-2">El software a la medida de tu negocio</h1>
+    <h2 class="text-lg md:text-xl text-slate-400 mb-6 md:mb-8">Construye tu propia plataforma web y app iOS, sin saber
+      programar.
     </h2>
-    <div class="flex space-x-4">
-      <a href="#contact" class="text-lg bg-slate-100 text-slate-900 px-4 py-3 rounded-full">Agenda una asesoría
-        gratuita</a>
-      <a href="#contact" class="text-lg text-white px-4 py-3 hover:underline">Ir a la demo &rarr;</a>
+    <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
+      <a href="#contact" class="text-base md:text-lg bg-slate-100 text-slate-900 px-4 py-3 rounded-full">Agenda una
+        asesoría gratuita</a>
+      <a href="#contact" class="text-base md:text-lg text-white px-4 py-3 hover:underline">Ir a la demo &rarr;</a>
     </div>
   </div>
-  <div class="flex items-center justify-end">
-    <img src="/images/logo.png" alt="Wolf Technology Logo" class="h-60 rounded-[2rem]">
+  <div class="hidden md:flex items-center justify-center md:justify-end mt-8 md:mt-0">
+    <img src="/images/logo.png" alt="Wolf Technology Logo" class="h-40 md:h-60 rounded-[2rem]">
   </div>
 </div>
