--- a/src/_pages/index.html
+++ b/src/_pages/index.html
@@ -15,6 +15,6 @@ layout: default
     </div>
   </div>
   <div class="hidden md:flex items-center justify-center md:justify-end mt-8 md:mt-0">
-    <img src="/images/logo.png" alt="Wolf Technology Logo" class="h-40 md:h-60 rounded-[2rem]">
+    <img src="/images/logo.png" alt="Wolf Technology Logo" class="h-40 md:h-60">
   </div>
 </div>
